src/index.scss
body {
    margin: 0;
    background: grey;
}

#topbar {
    position: fixed;
    width: 100%;
    height: 60px;
    box-sizing: border-box;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background: rgb(60, 60, 60, 0.7);
    border-bottom: 1px rgb(0, 0, 0, 0.7) solid;
    color: white;
    padding: 10px;
    z-index: 1;
}

#world {
    padding-top: 240px;
    padding-left: 240px;
    min-width: 100vw;
    min-height: 100vh;
}

#tile-to-place {
    position: absolute;
    pointer-events: none;
}

#stack {
    position: fixed;
    top: calc(60px + 20px);
    right: 20px;
    background: rgb(30, 30, 30, 0.7);
    border: 1px rgb(0, 0, 0, 0.7) solid;
    width: 75px;
    height: 75px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    div {
        text-align: center;
    }
}

#rotate {
    position: fixed;
    top: calc(60px + 20px);
    right: 20px;
    background: rgb(30, 30, 30, 0.7);
    border: 1px rgb(0, 0, 0, 0.7) solid;
    width: 75px;
    height: 75px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

#place-meeple {
    position: fixed;
    top: calc(60px + 20px);
    right: 20px;
    background: rgb(30, 30, 30, 0.7);
    border: 1px rgb(0, 0, 0, 0.7) solid;
    width: 75px;
    height: 75px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    cursor: pointer;
}

#end-turn {
    position: fixed;
    top: calc(60px + 20px + 75px + 20px);
    right: 20px;
    background: rgb(30, 30, 30, 0.7);
    border: 1px rgb(0, 0, 0, 0.7) solid;
    width: 75px;
    height: 75px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    cursor: pointer;
}

